--- a/elte-ik-llm-dlite-02.ipynb
+++ b/elte-ik-llm-dlite-02.ipynb
@@ -994,6 +994,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a9779c15-bea8-4729-b9f7-415817fd0657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wrapt_timeout_decorator\n",
+      "  Downloading wrapt_timeout_decorator-1.5.1-py3-none-any.whl (30 kB)\n",
+      "Collecting dill!=0.3.5,!=0.3.5.1,>0.3.0\n",
+      "  Downloading dill-0.3.8-py3-none-any.whl (116 kB)\n",
+      "     ---------------------------------------- 0.0/116.3 kB ? eta -:--:--\n",
+      "     -------------------------------------- 116.3/116.3 kB 3.4 MB/s eta 0:00:00\n",
+      "Collecting wrapt\n",
+      "  Downloading wrapt-1.16.0-cp310-cp310-win_amd64.whl (37 kB)\n",
+      "Requirement already satisfied: psutil in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from wrapt_timeout_decorator) (5.9.8)\n",
+      "Collecting cli-exit-tools\n",
+      "  Downloading cli_exit_tools-1.2.6-py3-none-any.whl (10 kB)\n",
+      "Collecting multiprocess\n",
+      "  Downloading multiprocess-0.70.16-py310-none-any.whl (134 kB)\n",
+      "     ---------------------------------------- 0.0/134.8 kB ? eta -:--:--\n",
+      "     -------------------------------------- 134.8/134.8 kB 4.0 MB/s eta 0:00:00\n",
+      "Collecting lib-detect-testenv\n",
+      "  Downloading lib_detect_testenv-2.0.8-py3-none-any.whl (8.4 kB)\n",
+      "Requirement already satisfied: click in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from cli-exit-tools->wrapt_timeout_decorator) (8.1.7)\n",
+      "Requirement already satisfied: colorama in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from click->cli-exit-tools->wrapt_timeout_decorator) (0.4.6)\n",
+      "Installing collected packages: wrapt, lib-detect-testenv, dill, multiprocess, cli-exit-tools, wrapt_timeout_decorator\n",
+      "Successfully installed cli-exit-tools-1.2.6 dill-0.3.8 lib-detect-testenv-2.0.8 multiprocess-0.70.16 wrapt-1.16.0 wrapt_timeout_decorator-1.5.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install wrapt_timeout_decorator"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "24a35c2a-17b9-40e0-bd94-5019aecd262b",
    "metadata": {},
@@ -1006,8 +1051,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "198b5b8e-fe50-479f-929d-45b100fea4b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: accelerate in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (0.28.0)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: packaging>=20.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (24.0)\n",
+      "Requirement already satisfied: psutil in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (5.9.8)\n",
+      "Requirement already satisfied: numpy>=1.17 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (1.26.4)\n",
+      "Requirement already satisfied: safetensors>=0.3.1 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (0.4.2)\n",
+      "Requirement already satisfied: pyyaml in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (6.0.1)\n",
+      "Requirement already satisfied: torch>=1.10.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (2.2.0+cu121)\n",
+      "Requirement already satisfied: huggingface-hub in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from accelerate) (0.21.4)\n",
+      "Requirement already satisfied: networkx in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (3.2.1)\n",
+      "Requirement already satisfied: fsspec in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (2024.2.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (4.10.0)\n",
+      "Requirement already satisfied: filelock in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (3.13.1)\n",
+      "Requirement already satisfied: sympy in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (1.12)\n",
+      "Requirement already satisfied: jinja2 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from torch>=1.10.0->accelerate) (3.1.3)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from huggingface-hub->accelerate) (4.66.2)\n",
+      "Requirement already satisfied: requests in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from huggingface-hub->accelerate) (2.31.0)\n",
+      "Requirement already satisfied: colorama in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from tqdm>=4.42.1->huggingface-hub->accelerate) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from jinja2->torch>=1.10.0->accelerate) (2.1.5)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from requests->huggingface-hub->accelerate) (3.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from requests->huggingface-hub->accelerate) (3.3.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from requests->huggingface-hub->accelerate) (2024.2.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from requests->huggingface-hub->accelerate) (2.2.1)\n",
+      "Requirement already satisfied: mpmath>=0.19 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from sympy->torch>=1.10.0->accelerate) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff86215-5e1d-41ed-8e8c-c7ace23f5839",
    "metadata": {},
    "outputs": [],
    "source": []
