--- a/elte-ik-llm-dlite-mini.ipynb
+++ b/elte-ik-llm-dlite-mini.ipynb
@@ -55,32 +55,22 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [09/May/2024 18:19:03] \"POST /length HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LOG: Input length: 243\n",
-      "LOG: Input length: 243\n",
-      "LOG: Summarize in one sentence: Jupiter, the largest planet in our solar system, commands attention with its immense size and swirling clouds of gas. Named after the king of the Roman gods, Jupiter's colossal presence dominates the space around it. Its massive magnetic field creates a protective shield, deflecting harmful solar winds and radiation, making it a formidable guardian of the inner solar system. One of Jupiter's most iconic features is its Great Red Spot, a massive storm that has been raging for centuries. This colossal tempest is larger than Earth itself, a testament to the planet's tumultuous atmosphere. Beneath its thick layer of clouds lies a world of mystery, with a core composed of metallic hydrogen and rocky material. Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well. Studying Jupiter provides valuable insights into the formation and evolution of our solar system. Its sheer magnitude and complexity continue to fascinate and inspire astronomers, offering a window into the mysteries of the cosmos.\n"
+      "LOG: Input length: 259\n",
+      "LOG: Give some keywords from this text: Cats, beloved companions to millions around the world, captivate us with their grace, independence, and mysterious allure. Domesticated for thousands of years, these enigmatic creatures have woven themselves into the fabric of human society, earning their place as cherished pets and valued members of the family. Known for their agility and keen hunting instincts, cats are skilled predators capable of navigating even the most precarious of environments with ease. Their lithe bodies, sharp claws, and acute senses make them formidable hunters, capable of stalking prey with silent precision. Yet, despite their predatory nature, cats also possess a softer side. They are affectionate animals, forming strong bonds with their human companions and often seeking out cuddles and attention. Their soothing purrs and gentle nuzzles bring comfort and joy to those fortunate enough to share their homes. Cats come in a variety of breeds, colors, and personalities, each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat, each feline friend brings something special to our lives. Whether curled up in a sunbeam, exploring the great outdoors, or simply lounging lazily on the couch, cats remind us to appreciate life's simple pleasures and embrace the beauty of the moment.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [09/May/2024 18:19:47] \"POST /sum HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOG: Input length: 243\n",
-      "LOG: Give keyword list: Jupiter, the largest planet in our solar system, commands attention with its immense size and swirling clouds of gas. Named after the king of the Roman gods, Jupiter's colossal presence dominates the space around it. Its massive magnetic field creates a protective shield, deflecting harmful solar winds and radiation, making it a formidable guardian of the inner solar system. One of Jupiter's most iconic features is its Great Red Spot, a massive storm that has been raging for centuries. This colossal tempest is larger than Earth itself, a testament to the planet's tumultuous atmosphere. Beneath its thick layer of clouds lies a world of mystery, with a core composed of metallic hydrogen and rocky material. Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well. Studying Jupiter provides valuable insights into the formation and evolution of our solar system. Its sheer magnitude and complexity continue to fascinate and inspire astronomers, offering a window into the mysteries of the cosmos.\n"
+      "127.0.0.1 - - [09/May/2024 18:34:14] \"POST /key HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -118,7 +108,7 @@
     "    data = request.get_json()\n",
     "    text = data.get('text', '')\n",
     "    if(req_length(text) <= 1024):\n",
-    "        return req_to_json('response', req_process('Give keyword list:', text))\n",
+    "        return req_to_json('response', req_process('Give some keywords from this text:', text))\n",
     "    else:\n",
     "        return req_to_json('error', 'Too long text. Limit is 1024 token.')\n",
     "\n",
