--- a/elte-ik-llm-dlite-02.ipynb
+++ b/elte-ik-llm-dlite-02.ipynb
@@ -1105,8 +1105,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ff86215-5e1d-41ed-8e8c-c7ace23f5839",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting flask-cors\n",
+      "  Downloading Flask_Cors-4.0.1-py2.py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: Flask>=0.9 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from flask-cors) (3.0.3)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Flask>=0.9->flask-cors) (3.1.3)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Flask>=0.9->flask-cors) (1.7.0)\n",
+      "Requirement already satisfied: Werkzeug>=3.0.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Flask>=0.9->flask-cors) (3.0.2)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Flask>=0.9->flask-cors) (2.1.2)\n",
+      "Requirement already satisfied: click>=8.1.3 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Flask>=0.9->flask-cors) (8.1.7)\n",
+      "Requirement already satisfied: colorama in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from click>=8.1.3->Flask>=0.9->flask-cors) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from Jinja2>=3.1.2->Flask>=0.9->flask-cors) (2.1.5)\n",
+      "Installing collected packages: flask-cors\n",
+      "Successfully installed flask-cors-4.0.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install flask-cors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f614d5e7-ff66-4742-8367-a9e47452b5dd",
    "metadata": {},
    "outputs": [],
    "source": []
