--- a/elte-ik-llm-dlite-mini.ipynb
+++ b/elte-ik-llm-dlite-mini.ipynb
@@ -55,106 +55,77 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [11/May/2024 16:53:56] \"POST /sum HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'apple', 'text_1': \"Jupiter, the largest planet in our solar system, commands attention with its immense size and swirling clouds of gas. Named after the king of the Roman gods, Jupiter's colossal presence dominates the space around it. Its massive magnetic field creates a protective shield, deflecting harmful solar winds and radiation, making it a formidable guardian of the inner solar system. One of Jupiter's most iconic features is its Great Red Spot, a massive storm that has been raging for centuries. This colossal tempest is larger than Earth itself, a testament to the planet's tumultuous atmosphere. Beneath its thick layer of clouds lies a world of mystery, with a core composed of metallic hydrogen and rocky material. Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well. Studying Jupiter provides valuable insights into the formation and evolution of our solar system. Its sheer magnitude and complexity continue to fascinate and inspire astronomers, offering a window into the mysteries of the cosmos.\", 'text_2': \"The MiG-21, a legendary Soviet-designed supersonic fighter aircraft, holds a revered place in aviation history. Introduced in the 1950s, it became one of the most widely produced jet fighters in the world, serving with over 60 countries across several decades. Its sleek delta-wing design and powerful engines gave it impressive speed and agility, earning it the nickname Fishbed in NATO nomenclature. Renowned for its simplicity and reliability, the MiG-21 was designed to be easy to maintain and operate, making it a favorite among air forces with limited resources. Its delta wing configuration allowed for quick take-offs and landings, even from short runways, making it well-suited for operations in a variety of environments. The MiG-21 saw extensive combat action during the Cold War and in numerous conflicts around the world. Its combat record includes engagements in Vietnam, the Middle East, and Africa, where its speed and maneuverability often gave it an edge over its adversaries. Despite being conceived over half a century ago, the MiG-21 remains in service with several air forces today, a testament to its enduring design and adaptability. While newer aircraft have surpassed it in many respects, the MiG-21's legacy as a versatile and iconic fighter endures in the annals of aviation history.\", 'text_3': \"Cats, beloved companions to millions around the world, captivate us with their grace, independence, and mysterious allure. Domesticated for thousands of years, these enigmatic creatures have woven themselves into the fabric of human society, earning their place as cherished pets and valued members of the family. Known for their agility and keen hunting instincts, cats are skilled predators capable of navigating even the most precarious of environments with ease. Their lithe bodies, sharp claws, and acute senses make them formidable hunters, capable of stalking prey with silent precision. Yet, despite their predatory nature, cats also possess a softer side. They are affectionate animals, forming strong bonds with their human companions and often seeking out cuddles and attention. Their soothing purrs and gentle nuzzles bring comfort and joy to those fortunate enough to share their homes. Cats come in a variety of breeds, colors, and personalities, each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat, each feline friend brings something special to our lives. Whether curled up in a sunbeam, exploring the great outdoors, or simply lounging lazily on the couch, cats remind us to appreciate life's simple pleasures and embrace the beauty of the moment.\"}\n",
-      "LOG: Input length: 1\n"
+      "{'text': \"Jupiter, the largest planet in our solar system, commands attention with its immense size and swirling clouds of gas. Named after the king of the Roman gods, Jupiter's colossal presence dominates the space around it. Its massive magnetic field creates a protective shield, deflecting harmful solar winds and radiation, making it a formidable guardian of the inner solar system.\"}\n",
+      "LOG: Input length: 67\n",
+      "LOG: Summarize in one sentence: Jupiter the largest planet in our solar system commands attention with its immense size and swirling clouds of gas. Named after the king of the Roman gods Jupiters colossal presence dominates the space around it. Its massive magnetic field creates a protective shield deflecting harmful solar winds and radiation making it a formidable guardian of the inner solar system.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/May/2024 16:54:13] \"POST /sum HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/May/2024 20:18:33] \"POST /sum HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2024 20:19:13] \"POST /length HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well.'}\n",
-      "LOG: Input length: 64\n"
+      "LOG: Input length: 249\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/May/2024 16:54:41] \"POST /sum HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/May/2024 20:19:21] \"POST /tittle HTTP/1.1\" 404 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well.'}\n",
-      "LOG: Input length: 64\n"
+      "LOG: Input length: 249\n",
+      "LOG: Give some keywords from this text: The MiG21 a legendary Sovietdesigned supersonic fighter aircraft holds a revered place in aviation history. Introduced in the 1950s it became one of the most widely produced jet fighters in the world serving with over 60 countries across several decades. Its sleek deltawing design and powerful engines gave it impressive speed and agility earning it the nickname Fishbed in NATO nomenclature.  Renowned for its simplicity and reliability the MiG21 was designed to be easy to maintain and operate making it a favorite among air forces with limited resources. Its delta wing configuration allowed for quick takeoffs and landings even from short runways making it wellsuited for operations in a variety of environments.  The MiG21 saw extensive combat action during the Cold War and in numerous conflicts around the world. Its combat record includes engagements in Vietnam the Middle East and Africa where its speed and maneuverability often gave it an edge over its adversaries.  Despite being conceived over half a century ago the MiG21 remains in service with several air forces today a testament to its enduring design and adaptability. While newer aircraft have surpassed it in many respects the MiG21s legacy as a versatile and iconic fighter endures in the annals of aviation history.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/May/2024 16:57:54] \"POST /sum HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/May/2024 20:20:03] \"POST /key HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2024 20:25:52] \"POST /length HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'Jupiter boasts a diverse family of moons, each with its own unique characteristics. Europa, with its icy surface and subsurface ocean, tantalizes scientists with the possibility of extraterrestrial life. Ganymede, the largest moon in the solar system, harbors its own magnetic field and may have a subsurface ocean as well.'}\n",
-      "LOG: Input length: 64\n"
+      "LOG: Input length: 242\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/May/2024 17:11:04] \"POST /sum HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/May/2024 20:27:57] \"POST /length HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'Cats come in a variety of breeds, colors, and personalities, each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat, each feline friend brings something special to our lives.'}\n",
-      "LOG: Input length: 47\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [11/May/2024 17:13:17] \"POST /sum HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text': 'Cats come in a variety of breeds, colors, and personalities, each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat, each feline friend brings something special to our lives.'}\n",
-      "LOG: Input length: 47\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [11/May/2024 17:19:15] \"POST /sum HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text': 'Cats come in a variety of breeds, colors, and personalities, each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat, each feline friend brings something special to our lives.'}\n",
-      "LOG: Input length: 47\n"
+      "LOG: Input length: 242\n",
+      "LOG: Input length: 242\n",
+      "LOG: Give some keywords from this text: Cats beloved companions to millions around the world captivate us with their grace independence and mysterious allure. Domesticated for thousands of years these enigmatic creatures have woven themselves into the fabric of human society earning their place as cherished pets and valued members of the family.  Known for their agility and keen hunting instincts cats are skilled predators capable of navigating even the most precarious of environments with ease. Their lithe bodies sharp claws and acute senses make them formidable hunters capable of stalking prey with silent precision.  Yet despite their predatory nature cats also possess a softer side. They are affectionate animals forming strong bonds with their human companions and often seeking out cuddles and attention. Their soothing purrs and gentle nuzzles bring comfort and joy to those fortunate enough to share their homes.  Cats come in a variety of breeds colors and personalities each with its own unique quirks and characteristics. From the playful antics of a kitten to the dignified demeanor of a senior cat each feline friend brings something special to our lives.  Whether curled up in a sunbeam exploring the great outdoors or simply lounging lazily on the couch cats remind us to appreciate lifes simple pleasures and embrace the beauty of the moment.\n"
      ]
     }
    ],
@@ -192,8 +163,8 @@
     "    print(data)\n",
     "    text = req_clean(data.get('text', ''))\n",
     "    if(req_length(text) <= 1024):\n",
-    "        #return req_to_json('response', req_process('Summarize in one sentence:', text))\n",
-    "        return req_to_json('response', \"TEST TEXT\")\n",
+    "        return req_to_json('response', req_process('Summarize in one sentence:', text))\n",
+    "        #return req_to_json('response', \"TEST TEXT\")\n",
     "    else:\n",
     "        return req_to_json('error', 'Too long text. Limit is 1024 token.')\n",
     "\n",
@@ -217,6 +188,8 @@
     "\n",
     "@app.route('/length', methods=['POST'])\n",
     "def length_req():\n",
+    "    data = request.get_json()\n",
+    "    text = req_clean(data.get('text', ''))\n",
     "    ret = {'length': req_length(text)}\n",
     "    return jsonify(ret)\n",
     "\n",
@@ -228,6 +201,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59c990f2-b594-4a69-91ad-b7ac4b4eb738",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ce5154-8f13-4d1f-8f0d-daa6a4f3cb51",
    "metadata": {},
    "outputs": [],
    "source": []
