--- a/elte-ik-llm-dlite-01.ipynb
+++ b/elte-ik-llm-dlite-01.ipynb
@@ -5,7 +5,7 @@
    "id": "7be38283-ab75-4c2f-83e8-d852c5463bef",
    "metadata": {},
    "source": [
-    "# Adatbányászat beadandó: LLM Teszt"
+    "# Adatbányászat beadandó: LLM Tesztelés"
    ]
   },
   {
@@ -433,24 +433,6 @@
    "source": [
     "res = generate_text(\"List Stanislaw Lem writings.\")\n",
     "print(res)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6563844b-031f-40f9-845c-824325a09fed",
-   "metadata": {},
-   "source": [
-    "## 5. Lépés: Próbáljuk meg tanítani a saját adathalmazunkkal?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16d60fad",
-   "metadata": {},
-   "source": [
-    "Megnézendő: https://huggingface.co/docs/transformers/en/training\n",
-    "Tanítsuk egy kérdés adatbázissal? Van egy.\n",
-    "CSV-ben társítva."
    ]
   }
  ],
