--- a/elte-ik-llm-dlite-02.ipynb
+++ b/elte-ik-llm-dlite-02.ipynb
@@ -5,7 +5,7 @@
    "id": "7be38283-ab75-4c2f-83e8-d852c5463bef",
    "metadata": {},
    "source": [
-    "# Adatbányászat beadandó: LLM Teszt"
+    "# Adatbányászat beadandó"
    ]
   },
   {
