--- a/elte-ik-llm-dlite-SERVER.ipynb
+++ b/elte-ik-llm-dlite-SERVER.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bf75da42-966f-4b7d-975f-6d23646b94af",
+   "metadata": {},
+   "source": [
+    "## Compact and full LLM szerver for the Chrome Extension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "100f34d5-d0d7-4322-a629-e37a8106c49b",
+   "metadata": {},
+   "source": [
+    "#### The elte-ik-llm-dlite notebook contains the installation and the experiments for the project.\n",
+    "#### This notebook is the practical runnable server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66aa89bd-780e-4269-bac7-4a3286747032",
    "metadata": {},
    "source": [
     "### (1) Load the pretrained model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73cff53a-7b6e-4239-b9ee-c56c061e968b",
+   "metadata": {},
+   "source": [
+    "Load and prepare the dlite-v2-1_5b LLM to the GPU"
    ]
   },
   {
@@ -33,6 +58,14 @@
    "metadata": {},
    "source": [
     "### (2) The REST server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b019cc38-373c-46a5-bf03-b68b51b81efa",
+   "metadata": {},
+   "source": [
+    "Initialise Flask REST CORS server for recive the process requests"
    ]
   },
   {
@@ -1183,22 +1216,6 @@
     "if __name__ == '__main__':\n",
     "    app.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59c990f2-b594-4a69-91ad-b7ac4b4eb738",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39ce5154-8f13-4d1f-8f0d-daa6a4f3cb51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
