--- a/elte-ik-llm-dlite-01.ipynb
+++ b/elte-ik-llm-dlite-01.ipynb
@@ -20,9 +20,7 @@
     "### Alap modell:\n",
     "    https://huggingface.co/openai-community/gpt2-large\n",
     "### Tanító adathalmaz 01:\n",
-    "    https://huggingface.co/datasets/aisquared/databricks-dolly-15k\n",
-    "### Tanító adathalmaz 02(Feladatspecifikus finomhangoláshoz):\n",
-    "    questions.csv"
+    "    https://huggingface.co/datasets/aisquared/databricks-dolly-15k"
    ]
   },
   {
@@ -266,7 +264,8 @@
    "id": "e1f2a574-8977-4324-a877-eadcbb722805",
    "metadata": {},
    "source": [
-    "## 4. Lépés: Teszteljük a modellt lokális fájlból GPU-n."
+    "## 4. Lépés: Teszteljük a modellt lokális fájlból GPU-n.\n",
+    "Megjegyzés: device_map=\"auto\"-t érdemes device_map=\"cuda\"-ra változtatni."
    ]
   },
   {
