Adding install notebook

--- a/elte-ik-llm-dlite-02.ipynb
+++ b/elte-ik-llm-dlite-02.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "id": "259c78fe-bdb6-4106-96fc-4196a9380936",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### -1 Lépés. Lokális környezet:\n",
     "    Windows 11 X64\n",
@@ -268,6 +270,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68eeb6c2-fb28-45c8-9999-11a5357e7bde",
+   "metadata": {},
+   "source": [
+    "Megjegyzés: device_map=\"auto\"-t érdemes device_map=\"cuda\"-ra változtatni."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "24184e27",
@@ -320,7 +330,7 @@
    "id": "cd22b52b-35d5-4ef0-8363-60ca49f1af1c",
    "metadata": {},
    "source": [
-    "#### +1 Teszteljük tovább"
+    "### +1 Teszteljük tovább"
    ]
   },
   {
@@ -447,7 +457,7 @@
    "id": "b4306c13-966c-405e-a00f-ca0d3c8e5ea7",
    "metadata": {},
    "source": [
-    "#### +2 Mennyire alkalmas szövegek összegzésére?"
+    "### +2 Mennyire alkalmas szövegek összegzésére?"
    ]
   },
   {
@@ -601,78 +611,6 @@
    "source": [
     "#### Melyik promt a legjobb eddig?\n",
     "Eddig ez a legjobb: Summarize this text in 1 sentence: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6563844b-031f-40f9-845c-824325a09fed",
-   "metadata": {},
-   "source": [
-    "## 5. Lépés: Próbáljuk meg tanítani a saját adathalmazunkkal?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16d60fad",
-   "metadata": {},
-   "source": [
-    "Megnézendő: https://huggingface.co/docs/transformers/en/training\n",
-    "Tanítsuk egy kérdés adatbázissal? Van egy.\n",
-    "CSV-ben társítva."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18685cca-3b38-47a3-b809-367eb9bce75c",
-   "metadata": {},
-   "source": [
-    "Esetleg használható dataset: https://huggingface.co/datasets/mandarjoshi/trivia_qa"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cce4e0a6-a7ed-4e1f-bec8-b36871398ce8",
-   "metadata": {},
-   "source": [
-    "Ötletek alkalmazáshoz:\n",
-    "\n",
-    "Chatbot: Készíthetsz egy chatbotot, amely képes valós idejű kommunikációra és válaszadásra felhasználókkal. Ez lehet egy általános célú chatbot, vagy specializáltabb, például egy tech support vagy tanácsadó chatbot.\n",
-    "\n",
-    "Tartalom generálás: Használhatod a GPT-2-t új tartalmak generálására, például cikkek, novellák, versek stb. létrehozására. Ez különösen hasznos lehet, ha olyan platformot üzemeltetsz, amely folyamatosan friss tartalmakra van szükség.\n",
-    "\n",
-    "Automatikus cím generálás: Fejleszthetsz egy rendszert, amely automatikusan generál címeket cikkekhez vagy blogbejegyzésekhez a megadott témában.\n",
-    "\n",
-    "Segéd a kreatív íráshoz: Készíthetsz egy eszközt, amely segít a kreatív írásban, például ötleteket ad szókincsre, témákra vagy cselekményekre.\n",
-    "\n",
-    "Kérdés-válasz rendszer: Implementálhatsz egy rendszert, amely képes válaszolni felhasználók által feltett kérdésekre. Ez hasznos lehet például FAQ oldalakon vagy oktató rendszerekben.\n",
-    "\n",
-    "Idézet generálás: Készíthetsz egy alkalmazást, amely idézeteket generál különböző témákban vagy hírességektől.\n",
-    "\n",
-    "Nyelvi modellek finomhangolása: Finomhangolhatod a GPT-2-t saját adatokon vagy speciális feladatokra, például jogi dokumentumok, orvosi szövegek vagy pénzügyi jelentések kezelésére.\n",
-    "\n",
-    "Párbeszédgenerálás játékokban: Integrálhatod a GPT-2-t párbeszédgenerálásra játékokba, interaktív történetekbe vagy szerepjátékokba.\n",
-    "\n",
-    "Reklám- vagy termékleírás-generálás: Automatizálhatod a reklám vagy termékleírások generálását az egyes termékek vagy szolgáltatások alapján.\n",
-    "\n",
-    "Nyelvi támogatás: Készíthetsz egy alkalmazást, amely nyelvi segítséget nyújt az embereknek, például nyelvtanuláshoz vagy fordításhoz."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "952fe75e-4e22-44d1-adf6-fd216cf264b3",
-   "metadata": {},
-   "source": [
-    "Ötlet: Versíró segéd? Kulcsszavakra részleteket generál?\n",
-    "Szöveg rövidítő, összegző.\n",
-    "Cím generátor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd67ca87-1ff0-47d4-995f-aaa5b2aeff9c",
-   "metadata": {},
-   "source": [
-    "Ezekhez dataset?"
    ]
   },
   {
@@ -992,51 +930,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a9779c15-bea8-4729-b9f7-415817fd0657",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting wrapt_timeout_decorator\n",
-      "  Downloading wrapt_timeout_decorator-1.5.1-py3-none-any.whl (30 kB)\n",
-      "Collecting dill!=0.3.5,!=0.3.5.1,>0.3.0\n",
-      "  Downloading dill-0.3.8-py3-none-any.whl (116 kB)\n",
-      "     ---------------------------------------- 0.0/116.3 kB ? eta -:--:--\n",
-      "     -------------------------------------- 116.3/116.3 kB 3.4 MB/s eta 0:00:00\n",
-      "Collecting wrapt\n",
-      "  Downloading wrapt-1.16.0-cp310-cp310-win_amd64.whl (37 kB)\n",
-      "Requirement already satisfied: psutil in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from wrapt_timeout_decorator) (5.9.8)\n",
-      "Collecting cli-exit-tools\n",
-      "  Downloading cli_exit_tools-1.2.6-py3-none-any.whl (10 kB)\n",
-      "Collecting multiprocess\n",
-      "  Downloading multiprocess-0.70.16-py310-none-any.whl (134 kB)\n",
-      "     ---------------------------------------- 0.0/134.8 kB ? eta -:--:--\n",
-      "     -------------------------------------- 134.8/134.8 kB 4.0 MB/s eta 0:00:00\n",
-      "Collecting lib-detect-testenv\n",
-      "  Downloading lib_detect_testenv-2.0.8-py3-none-any.whl (8.4 kB)\n",
-      "Requirement already satisfied: click in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from cli-exit-tools->wrapt_timeout_decorator) (8.1.7)\n",
-      "Requirement already satisfied: colorama in d:\\elte-ik-adatbanyaszat\\venv\\lib\\site-packages (from click->cli-exit-tools->wrapt_timeout_decorator) (0.4.6)\n",
-      "Installing collected packages: wrapt, lib-detect-testenv, dill, multiprocess, cli-exit-tools, wrapt_timeout_decorator\n",
-      "Successfully installed cli-exit-tools-1.2.6 dill-0.3.8 lib-detect-testenv-2.0.8 multiprocess-0.70.16 wrapt-1.16.0 wrapt_timeout_decorator-1.5.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: There was an error checking the latest version of pip.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install wrapt_timeout_decorator"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "24a35c2a-17b9-40e0-bd94-5019aecd262b",
    "metadata": {},
@@ -1139,12 +1032,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f614d5e7-ff66-4742-8367-a9e47452b5dd",
+   "cell_type": "markdown",
+   "id": "bdd0e220-76db-46d9-b8a3-6659f4b4760c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Készítsünk külön kompakt notebook-ot a backendnek!"
+   ]
   }
  ],
  "metadata": {
