--- a/elte-ik-llm-dlite-SERVER.ipynb
+++ b/elte-ik-llm-dlite-SERVER.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "998ca9ba-457c-42b6-9af4-0b0357633fb4",
    "metadata": {},
    "outputs": [
@@ -1075,6 +1075,54 @@
      "output_type": "stream",
      "text": [
       "127.0.0.1 - - [13/May/2024 02:26:43] \"POST /sum HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOG: Input length: 218\n",
+      "LOG: Give the most important word in the text: The cat Felis catus commonly referred to as the domestic cat or house cat is a small domesticated carnivorous mammal. It is the only domesticated species of the family Felidae. Recent advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a house pet and farm cat but also ranges freely as a feral cat avoiding human contact. It is valued by humans for companionship and its ability to kill vermin. Its retractable claws are adapted to killing small prey like mice and rats. It has a strong flexible body quick reflexes sharp teeth and its night vision and sense of smell are well developed. It is a social species but a solitary hunter and a crepuscular predator. Cat communication includes vocalizations like meowing purring trilling hissing growling and grunting as well as cat body language. It can hear sounds too faint or too high in frequency for human ears such as those made by small mammals. It also secretes and perceives pheromones.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/May/2024 02:44:04] \"POST /title HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': 'The cat (Felis catus), commonly referred to as the domestic cat or house cat, is a small domesticated carnivorous mammal. It is the only domesticated species of the family Felidae. Recent advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a house pet and farm cat, but also ranges freely as a feral cat avoiding human contact. It is valued by humans for companionship and its ability to kill vermin. Its retractable claws are adapted to killing small prey like mice and rats. It has a strong, flexible body, quick reflexes, sharp teeth, and its night vision and sense of smell are well developed. It is a social species, but a solitary hunter and a crepuscular predator. Cat communication includes vocalizations like meowing, purring, trilling, hissing, growling, and grunting as well as cat body language. It can hear sounds too faint or too high in frequency for human ears, such as those made by small mammals. It also secretes and perceives pheromones.'}\n",
+      "LOG: Input length: 218\n",
+      "LOG: Summarize in one sentence: The cat Felis catus commonly referred to as the domestic cat or house cat is a small domesticated carnivorous mammal. It is the only domesticated species of the family Felidae. Recent advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a house pet and farm cat but also ranges freely as a feral cat avoiding human contact. It is valued by humans for companionship and its ability to kill vermin. Its retractable claws are adapted to killing small prey like mice and rats. It has a strong flexible body quick reflexes sharp teeth and its night vision and sense of smell are well developed. It is a social species but a solitary hunter and a crepuscular predator. Cat communication includes vocalizations like meowing purring trilling hissing growling and grunting as well as cat body language. It can hear sounds too faint or too high in frequency for human ears such as those made by small mammals. It also secretes and perceives pheromones.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/May/2024 02:44:59] \"POST /sum HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [13/May/2024 02:45:29] \"POST /length HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOG: Input length: 264\n",
+      "LOG: Input length: 264\n",
+      "LOG: Give the most important word in the text: Saturn is the sixth planet from the Sun and the secondlargest in the Solar System after Jupiter. It is a gas giant with an average radius of about nineandahalf times that of Earth.2627 It has only oneeighth the average density of Earth but is over 95 times more massive.282930 Even though Saturn is nearly the size of Jupiter Saturn has less than onethird of Jupiters mass. Saturn orbits the Sun at a distance of 9.59 AU 1434 million km with an orbital period of 29.45 years.  Saturns interior is thought to be composed of a rocky core surrounded by a deep layer of metallic hydrogen an intermediate layer of liquid hydrogen and liquid helium and finally a gaseous outer layer. Saturn has a pale yellow hue due to ammonia crystals in its upper atmosphere. An electrical current within the metallic hydrogen layer is thought to give rise to Saturns planetary magnetic field which is weaker than Earths but which has a magnetic moment 580 times that of Earth due to Saturns larger size. Saturns magnetic field strength is around onetwentieth of Jupiters.31 The outer atmosphere is generally bland and lacking in contrast although longlived features can appear. Wind speeds on Saturn can reach 1800 kilometres per hour 1100 miles per hour.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/May/2024 02:50:01] \"POST /title HTTP/1.1\" 200 -\n"
      ]
     }
    ],
